# Proteosom

./: README.md  ms_experiment_final.ipynb  pyproject.toml
.github/workflows/: tests.yml
tests/: test_file_handling.py  test_liquid_chromatography.py  test_protein_digestion.py
